Fixed issue where card was displaying image not centered on BIG SCREENS

--- a/src/components/VegetablePage/VegetablePage.scss
+++ b/src/components/VegetablePage/VegetablePage.scss
@@ -1,6 +1,6 @@
 .VegetableCardGroup {
   display: flex;
-  padding: 0.75em;
+  //   padding: 0.75em;
   padding-top: 1%;
   margin-left: 2%;
 }
